idf_component_register(SRCS
        common.h
        main.cpp

        MqttEvent.h
        MqttEvent.cpp
        MqttQueue.h
        MqttQueue.cpp

        interfaces/Task.h
        interfaces/Task.cpp
        WifiTask.h
        WifiTask.cpp
        MqttTask.h
        MqttTask.cpp
        LivoloRFTask.h
        LivoloRFTask.cpp

        INCLUDE_DIRS "")